# claude-resume-assistant

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  COST_TRACKING_IMPLEMENTATION.md  FINAL_POLISH_SUMMARY.md  LICENSE  README.md  bug_analysis_and_fixes.md  cost_tracker_cli.py  demo_cost_tracker.py  plan.md  pyproject.toml  recommendations.md  resume_customizer.py  spec.md  test_cost_tracker.py  test_coverage_improvements.md  todo.md
.github/workflows/: claude.yml  gen_ai_issue_labeler.yml
docs/: cost_tracking.md
examples/: README.md  data_scientist_resume.txt  entry_level_resume.txt  frontend_job.txt  job_description.txt  ml_engineer_job.txt  resume.txt
scripts/: check_types.py  test_cost_tracking.py  test_minimal_cost.py  test_sdk_messages.py
src/resume_customizer/: __init__.py  config.py  cost_tracker.py
tests/: test_project_structure.py
tests/fixtures/: test_claude_client_demo.py  test_encoding.py  test_output_writer.py
tests/integration/: README.md  fixtures.py  run_integration_tests.py  test_api_integration.py  test_claude_integration.py  test_cli_workflow.py  test_cost_measurement.py  test_error_scenarios.py  test_file_operations.py  test_performance_benchmarks.py  test_quality_validation.py
tests/unit/: import_fixes_summary.md  test_claude_client.py  test_cli.py  test_config.py  test_customization_result.py  test_customizer.py  test_documentation.py  test_job_description_model.py  test_logging.py  test_markdown_reader.py  test_output_writer.py  test_progress.py  test_prompts.py  test_readers.py  test_resume_model.py  (+1 more)
(+17 files in other folders)
